doc: 手動でのインストール操作を追記。